force-app/main/default/objects/Campaign/fields/Bond_Counsel__c.field-meta.xml
<CustomField>
    <fullName>Bond_Counsel__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the name of the Bond Counsel for the Capital Markets deal</inlineHelpText>
    <label>Bond Counsel</label>
    <length>20</length>
    <type>Text</type>
</CustomField>