force-app/main/default/objects/Campaign/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bankcard</fullName>
            </value>
            <value>
                <fullName>CBG - CO Market</fullName>
            </value>
            <value>
                <fullName>CBG - IL Market</fullName>
            </value>
            <value>
                <fullName>CBG - KS Market</fullName>
            </value>
            <value>
                <fullName>CBG - Omaha - Ag/CoBank/Renew</fullName>
            </value>
            <value>
                <fullName>CBG - Omaha - Community Banking</fullName>
            </value>
            <value>
                <fullName>CBG - Omaha - Corporate Lending</fullName>
            </value>
            <value>
                <fullName>CBG - Omaha - CRE</fullName>
            </value>
            <value>
                <fullName>CBG - Omaha - CTS</fullName>
            </value>
            <value>
                <fullName>FNTS</fullName>
            </value>
            <value>
                <fullName>IS - Capital Markets</fullName>
            </value>
            <value>
                <fullName>IS - Investments and Planning</fullName>
            </value>
            <value>
                <fullName>IS - NEST</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Wealth Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>