force-app/main/default/objects/Campaign/fields/Campaign_Pictures__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Pictures__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Campaign Images</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>