force-app/main/default/objects/Campaign/fields/Campaign_Procedures__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Procedures__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Campaign Procedures</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>