force-app/main/default/objects/Campaign/fields/Capital_Markets_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Capital_Markets_Buyer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the name of the Capital Markets deal Buyer</inlineHelpText>
    <label>Capital Markets - Buyer</label>
    <length>20</length>
    <type>Text</type>
</CustomField>