force-app/main/default/objects/Campaign/fields/Capital_Markets_Call_Notice_Status__c.field-meta.xml
<CustomField>
    <fullName>Capital_Markets_Call_Notice_Status__c</fullName>
    <label>Capital Markets - Call Notice Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sent - Yes</fullName>
            </value>
            <value>
                <fullName>NA - Loan Refunding</fullName>
            </value>
            <value>
                <fullName>NA - New Money</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>