force-app/main/default/objects/Campaign/fields/Capital_Markets_Date_Reported_in_FOCUS__c.field-meta.xml
<CustomField>
    <fullName>Capital_Markets_Date_Reported_in_FOCUS__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the date reported in FOCUS</inlineHelpText>
    <label>Capital Markets - Date Reported in FOCUS</label>
    <type>Date</type>
</CustomField>