force-app/main/default/objects/Campaign/fields/Capital_Markets_Deal_Structure__c.field-meta.xml
<CustomField>
    <fullName>Capital_Markets_Deal_Structure__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Describe the structure of the Capital Markets deal.</inlineHelpText>
    <label>Capital Markets - Deal Structure</label>
    <type>TextArea</type>
</CustomField>