force-app/main/default/objects/Campaign/fields/Capital_Markets_Fee_Percent__c.field-meta.xml
<CustomField>
    <fullName>Capital_Markets_Fee_Percent__c</fullName>
    <inlineHelpText>Enter the expected fee percent</inlineHelpText>
    <label>Capital Markets - Fee Percent</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>