force-app/main/default/objects/Campaign/fields/Capital_Markets_Fees__c.field-meta.xml
<CustomField>
    <fullName>Capital_Markets_Fees__c</fullName>
    <inlineHelpText>Enter in our expected fee revenue</inlineHelpText>
    <label>Capital Markets - Fee Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>