force-app/main/default/objects/Campaign/fields/Capital_Markets_New_Money_or_Refunding__c.field-meta.xml
<CustomField>
    <fullName>Capital_Markets_New_Money_or_Refunding__c</fullName>
    <inlineHelpText>Select which option best describes the deal.</inlineHelpText>
    <label>Capital Markets - New Money or Refunding</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Loan Refunding</fullName>
            </value>
            <value>
                <fullName>New Money</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Refunding</fullName>
            </value>
            <value>
                <fullName>Refunding &amp; New Money</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>