force-app/main/default/objects/Campaign/fields/Deal_Size__c.field-meta.xml
<CustomField>
    <fullName>Deal_Size__c</fullName>
    <inlineHelpText>Enter the size of the Capital Markets deal</inlineHelpText>
    <label>Capital Markets - Deal Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>