force-app/main/default/objects/Campaign/fields/Get_Help__c.field-meta.xml
<CustomField>
    <fullName>Get_Help__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Get Help</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>