force-app/main/default/objects/Campaign/fields/Number_of_Guests__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Guests__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Number of Guests</label>
    <length>6</length>
    <type>Text</type>
</CustomField>