force-app/main/default/objects/Campaign/fields/Promo_Offer_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Promo_Offer_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Promo Offer End Date</label>
    <type>Date</type>
</CustomField>