force-app/main/default/objects/Campaign/fields/User_Profile_for_Reporting_Campaigns__c.field-meta.xml
<CustomField>
    <fullName>User_Profile_for_Reporting_Campaigns__c</fullName>
    <formula>Owner.User_Profile_for_Reporting__c</formula>
    <label>User Profile for Reporting - Campaigns</label>
    <type>Text</type>
</CustomField>