force-app/main/default/objects/Campaign/recordTypes/Capital_Markets_Campaign.recordType-meta.xml
<RecordType>
    <fullName>Capital_Markets_Campaign</fullName>
    <active>false</active>
    <description>Campaign record type for Institutional Investments - Capital Markets</description>
    <label>Capital Markets Campaign</label>
</RecordType>