force-app/main/default/objects/Campaign/recordTypes/Triggered_Data_Campaigns.recordType-meta.xml
<RecordType>
    <fullName>Triggered_Data_Campaigns</fullName>
    <active>true</active>
    <label>Triggered Data Campaigns</label>
</RecordType>