force-app/main/default/objects/Campaign/recordTypes/Welcome_Letter_Campaign.recordType-meta.xml
<RecordType>
    <fullName>Welcome_Letter_Campaign</fullName>
    <active>true</active>
    <label>Welcome Letter Campaign</label>
</RecordType>